--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/ebe.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Ebenezer Gomez</a></h1>
+					<h1 id="logo"><a href="#">Ebenezer Gómez</a></h1>
 					<p>Developer & Abogada<br /></p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Sobre mi</a></li>
+						<li><a href="#one" class="active">Sobre mí</a></li>
 						<li><a href="#two">Habilidades</a></li>
 						<li><a href="#three">Portafolio</a></li>
 						<li><a href="#four">Contacto</a></li>
@@ -32,10 +32,10 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-                        <li><a href="https://github.com/ebegoflo" class="icon fa-github"><span class="label">Github</span></a></li>
-                        <li><a href="https://www.linkedin.com/in/ebenezer-gomez-77587544/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://www.facebook.com/ebenezerfloresg?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                        <li><a target="_blank" href="https://github.com/ebegoflo" class="icon fa-github"><span class="label">Github</span></a></li>
+                        <li><a target="_blank" href="https://www.linkedin.com/in/ebenezer-gomez-77587544/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a target="_blank" href="https://www.facebook.com/ebenezerfloresg" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a target="_blank" href="mailto:ebenezergf@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -50,11 +50,10 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>Soy...</h2>
+										<p>Actualmente estudiante en Laboratoria en desarrollo Front-End, me apasiona aprender todo el tiempo<br />
+										a la par de mis estudios en desarrollo, me encuentro estudiando la licenciatura en Derecho.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 								</div>
 							</section>
 
@@ -79,27 +78,31 @@
 									<h3>Portafolio</h3>
 									<div class="features">
                                             <article>
-                                                    <a href="https://abogadomania.com/" class="image"><img src="images/abogadomania.png" alt="" /></a>
+                                                    <a href="https://abogadomania.com/" target="_blank" class="image"><img src="images/abogadomania.png" alt="" /></a>
                                                     <div class="inner">
                                                         <h4>Abogadomania.com</h4>
-                                                        <p>Co-founder, participe en el diseño asi como en la parte de generacion de contenido para los usuarios.</p>
-                                                        <p>Este proyecto fue el que me llevo a queres descubrir y estudiar el mundo del desarrollo.</p>
-                                                        <button disabled="disabled"><a href=""https://abogadomania.com/"">Ver</a></button>
+                                                        <p>Co-founder, participe en el diseño asi como en la parte de generacion de contenido para los usuarios, logrando tener en tres meses 1,000 usuarios registrados.</p>
+														<p>Este proyecto fue el que desperto la curisoidad a entenderlo y como funcionaba, por lo que decidí estudiar,programación</p>
+														<a class="button" target="_blank" href="https://abogadomania.com/">Ver</a>
                                                     </div>
                                                 </article>
 										<article>
 											<a href="#" class="image"><img src="images/pokedex.png" alt="" /></a>
 											<div class="inner">
 												<h4>Pokedex</h4>
-												<p>Este proyecto </p>
+												<p>Este proyecto fue un reto al enfrentarnos al consumo de una API poder conocerla y realizar request para poder obtener la información para poder mostrarla en pantalla a través de la manipulación del DOM</p>
+												<a class="button" target="_blank" href="https://ebegoflo.github.io/pokedex/">Ver</a>
+												<a class="button" target="_blank" href="https://github.com/ebegoflo/pokedex">Repositorio Github</a>
 											</div>
 										</article>
 										
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://indezende.github.io/s5-e-commerce/" target="_blank" class="image"><img src="images/ecommerce.PNG" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>E-commerce</h4>
+												<p>En este producto fue un trabajo en equipo en el que teniamos que desarrollar una E-commerce, consumiendo API de Mercado Libre, Pay-Pal y Firebase de Google, para que nuestros usuarios pudieran inicias sesion y poder realizar la compra   </p>
+												<a class="button" target="_blank" href="https://indezende.github.io/s5-e-commerce/">Ver</a>
+												<a class="button" target="_blank" href="https://github.com/INDEZENDE/s5-e-commerce">Repositorio Github</a>
 											</div>
 										</article>
 									</div>
@@ -110,8 +113,8 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
+									<p>Mail: ebenezergf@gmail.com</p>
+									<!-- <form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -130,13 +133,13 @@
 												</ul>
 											</div>
 										</div>
-									</form>
+									</form> -->
 								</div>
 							</section>
 
 						<!-- Five -->
-						<!--
-							<section id="five">
+						
+							<!-- <section id="five">
 								<div class="container">
 									<h3>Elements</h3>
 
@@ -481,7 +484,7 @@
 							</section>
 						-->
 
-					</div>
+					<!-- </div> --> 
 
 				<!-- Footer -->
 					<section id="footer">
