--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <li><a target="_blank" href="https://www.linkedin.com/in/ebenezer-gomez-77587544/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a target="_blank" href="https://www.facebook.com/ebenezerfloresg" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a target="_blank" href="mailto:ebenezergf@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a target="_blank"  href="https://api.whatsapp.com/send?phone=5215585762696" class="icon fa-whatsapp" ><span class="label">Whatapp</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -63,11 +64,12 @@
 									<h3>Habilidades</h3>
 									<ul class="feature-icons">
 										<li class="fa-code">Javascript</li>
+										<li class="fa-html5">HTML</li>
+										<li class="fa-css3">CSS</li>
 										<li class="fa-cubes">Trabajo en equipo</li>
 										<li class="fa-book">Auto aprendizaje</li>
 										<li class="fa-coffee">Beber mucho café</li>
-										<!-- <li class="fa-bolt">Lightning bolt</li> -->
-										<li class="fa-users">Git Colaborativo</li>
+										<li class="fa-github">Git Colaborativo</li>
 									</ul>
 								</div>
 							</section>
@@ -82,17 +84,17 @@
                                                     <div class="inner">
                                                         <h4>Abogadomania.com</h4>
                                                         <p>Co-founder, participe en el diseño asi como en la parte de generacion de contenido para los usuarios, logrando tener en tres meses 1,000 usuarios registrados.</p>
-														<p>Este proyecto fue el que desperto la curisoidad a entenderlo y como funcionaba, por lo que decidí estudiar,programación</p>
+														<p>Este proyecto fue el que desperto la curiosidad d entender como funcionaba, por lo que decidí estudiar,programación</p>
 														<a class="button" target="_blank" href="https://abogadomania.com/">Ver</a>
                                                     </div>
                                                 </article>
 										<article>
-											<a href="#" class="image"><img src="images/pokedex.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/starwars.png" alt="" /></a>
 											<div class="inner">
-												<h4>Pokedex</h4>
-												<p>Este proyecto fue un reto al enfrentarnos al consumo de una API poder conocerla y realizar request para poder obtener la información para poder mostrarla en pantalla a través de la manipulación del DOM</p>
-												<a class="button" target="_blank" href="https://ebegoflo.github.io/pokedex/">Ver</a>
-												<a class="button" target="_blank" href="https://github.com/ebegoflo/pokedex">Repositorio Github</a>
+												<h4>Star Wars</h4>
+												<p>Este proyecto me enfrente al consumo de una API poder conocerla y realizar request para poder obtener la información de cada pelicula y mostrarla en pantalla a través de la manipulación del DOM</p>
+												<a class="button" target="_blank" href="https://ebegoflo.github.io/starwars-API/">Ver</a>
+												<a class="button" target="_blank" href="https://github.com/ebegoflo/starwars-API.git">Repositorio Github</a>
 											</div>
 										</article>
 										
@@ -113,7 +115,8 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Mail: ebenezergf@gmail.com</p>
+									<p><a target="_blank" href="mailto:ebenezergf@gmail.com" class="icon fa-envelope">  ebenezergf@gmail.com</a></p>
+									<p ><a href="https://api.whatsapp.com/send?phone=5215585762696" target="_blank" class="icon fa-whatsapp">  +52 5585762696</a></p>
 									<!-- <form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
